data/derived/sp14/progs/unify/prog0572.ml.out
Characters 29-39:
  let fixpoint (f,b) = wwhile ((g (f, b)),b);;
                               ^^^^^^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
